--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이정원의 홈페이지</title>
-    <link rel="stylesheet" href="index.css"/>
-    <link rel="stylesheet" href="layout.css"/>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="layout.css" />
 </head>
+
 <body>
     <header>환영합니다</header>
     <div class="container">
@@ -21,15 +23,16 @@
             </ul>
         </nav>
         <main>
-            이름<input type="text" name="name" placeholder="이름을 입력하세요." autofocus class="txt"/>
-            남<input type="radio" name="gender" value="남" id="men"/><label for="men"></label>
-            여<input type="radio" name="gender" value="여" id="women"/><label for="women"></label>
-            <p></p><textarea id="newtxtContent" placeholder="하고 싶은 말을 남겨주세요." onkeydown="resize(this)" onkeyup="resize(this)"></textarea>
+            이름<input type="text" name="name" placeholder="이름을 입력하세요." autofocus class="txt" />
+            남<input type="radio" name="gender" value="남" id="men" /><label for="men"></label>
+            여<input type="radio" name="gender" value="여" id="women" /><label for="women"></label>
+            <p></p><textarea id="newtxtContent" placeholder="하고 싶은 말을 남겨주세요." onkeydown="resize(this)"
+                onkeyup="resize(this)"></textarea>
             <button class="btn-submit">제출</button>
         </main>
         <aside>
             <a href="https://blog.naver.com/terykid" target="_blank">블로그</a>
-            <a href="https://www.youtube.com/channel/UCHny-haLamlkSUA2y0nTaNA" target="_blank">유튜브</a>    
+            <a href="https://www.youtube.com/channel/UCHny-haLamlkSUA2y0nTaNA" target="_blank">유튜브</a>
         </aside>
     </div>
     <footer>
@@ -38,6 +41,7 @@
             <li>E-mail:terykid@gmail.com</li>
         </ul>
     </footer>
-    
+    <script src="index.js"></script>
 </body>
+
 </html>
