--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <button class="btn-submit">제출</button>
         </div>
         <aside>
-            <a href="https://blog.naver.com/terykid" target="_blank">블로그</a>
-            <a href="https://www.youtube.com/channel/UCHny-haLamlkSUA2y0nTaNA" target="_blank">유튜브</a>
+            <p><a href="https://blog.naver.com/terykid" target="_blank">블로그</a></p>
+            <p><a href="https://www.youtube.com/channel/UCHny-haLamlkSUA2y0nTaNA" target="_blank">유튜브</a></p>
         </aside>
     </div>
     <footer>
@@ -41,7 +41,7 @@
             <li>E-mail:terykid@gmail.com</li>
         </ul>
     </footer>
-    <script src="index.js"></script>
+    <script src="index.js"></script>//필수
 </body>
 
 </html>
