--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
             </ul>
         </nav>
         <div id="main">
+            <main>//기본 틀 구축
             이름<input type="text" name="name" placeholder="이름을 입력하세요." autofocus class="txt" />
             남<input type="radio" name="gender" value="남" id="men" /><label for="men"></label>
             여<input type="radio" name="gender" value="여" id="women" /><label for="women"></label>
             <p></p><textarea id="newtxtContent" placeholder="하고 싶은 말을 남겨주세요." onkeydown="resize(this)"
                 onkeyup="resize(this)"></textarea>
             <button class="btn-submit">제출</button>
+            </main>
         </div>
         <aside>
             <p><a href="https://blog.naver.com/terykid" target="_blank">블로그</a></p>
